--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "@angular/service-worker": "^15.2.0",
+    "@aws-sdk/client-s3": "^3.321.1",
     "@azure/msal-angular": "^2.5.4",
     "@azure/msal-browser": "^2.34.0",
     "ckeditor4-angular": "^3.3.0",
