--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "dynamic-form-renderer": {
+    "dynamic-form": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/dynamic-form-renderer",
+            "outputPath": "dist/dynamic-form",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
@@ -69,10 +69,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "dynamic-form-renderer:build:production"
+              "browserTarget": "dynamic-form:build:production"
             },
             "development": {
-              "browserTarget": "dynamic-form-renderer:build:development"
+              "browserTarget": "dynamic-form:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -80,7 +80,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "dynamic-form-renderer:build"
+            "browserTarget": "dynamic-form:build"
           }
         },
         "test": {
